OxyMP/oxymp/tests/trybuild/tokens/incorrect-fields.stderr
error: Exact tokens can't contain any data. Consider removing any associated data for this token variant.
 --> tests/trybuild/tokens/incorrect-fields.rs:7:14
  |
7 |         While(i64),
  |              ^^^^^

error: Regex tokens must contain some data. Make sure that the variant definition includes encapsulated data.
  --> tests/trybuild/tokens/incorrect-fields.rs:22:9
   |
22 |         Number,
   |         ^^^^^^

error: Regex tokens must contain some data. Make sure that the variant definition includes encapsulated data.
  --> tests/trybuild/tokens/incorrect-fields.rs:32:9
   |
32 |         Number(),
   |         ^^^^^^

error: Regex tokens must contain some data. Make sure that the variant definition includes encapsulated data.
  --> tests/trybuild/tokens/incorrect-fields.rs:42:9
   |
42 |         Number {},
   |         ^^^^^^
